# libopensteamschema

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: push_build_deploy.yml
include/openitemdef/: context.h  openitemdef.h  parser.h  schema.h  steam_types.h
include/opensteamschema/: context.h  opensteamschema.h  parser.h  version.h
scripts/: build.sh
src/: CMakeLists.txt  context.c  parser.c  schema.c  steam_types.c  test.c  version.c
tests/: CMakeLists.txt  test_context.c  test_parser.c  test_schema.c  test_steam_types.c  test_version.c
